app/src/Home.css
/* ... */
.holds_picture {
  width: 325px;
  height: 235px;
  display: flex;
}

.MuiGrid-root.presets {
  display: flex;
  flex-wrap: nowrap;
  width: auto;
  padding-bottom: 9vh;
  padding-top: 40px;
}

.MuiGrid-root.preset-item {
  margin-right: 16px;
  margin-left: 16px;
}

.chart {
  width: 100%;
  height: 100%;
}

.details {
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: 2%;
  max-width: 60%;
  min-width: 50%;
  width: 100%;
  flex-wrap: wrap;
}

.preset_name {
  margin-left: 10%;
  margin-right: 5%;
  padding: 2%;
}

.description {
  margin-left: 10%;
  margin-right: 5%;
  padding: 2%;
}

.MuiButton-root.info-button {
  margin-left: auto;
  margin-right: auto;
  width: 325px;
  height: 75px;
}

.bottom-button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 20vh;
}

.MuiButton-root.remove-cache-button {
  display: flex;
  justify-content: center;
  align-items: auto;
  margin-left: auto;
  margin-right: auto;
  border-radius: 40px;
}

.MuiFormControlLabel-root.checkbox {
  margin-left: 30%;
  margin-top: 30px;
}

.MuiAccordion-root.Mui-expanded.preset-highlight,
.MuiAccordion-root.preset-highlight {
  background: transparent;
  margin-bottom: 20px;
  border-radius: 4px;
  margin: 5%;
  overflow: hidden;
}

.MuiAccordionSummary-root.preset-summary {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  background-color: rgba(0, 0, 0, 0.04);
}

.MuiTypography-root.preset-type-title {
  font-size: 1.5rem;
}

.sub-header-section-landing-page-image {
  grid-column: 2 / 3;
  width: 100%;
  align-self: center;
}

.landing-page-title {
  line-height: 1.5em;
  font-size: 2.5rem;
}

.get-started-button-landing-page {
  top: 5%;
  display: flex;
  margin-top: 4px;
  rotate: 90deg;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
}

.sub-header-section-landing-page,
.home-landing-page-carousel {
  display: grid;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  padding-top: 0;
  position: relative;
}

.sub-header-section-landing-page {
  display: grid;
  grid-template-columns: 0.8fr 1.2fr 0.4fr;
  grid-template-rows: auto 1fr auto;
  column-gap: 30px;
  padding-right: 1%;
  padding-left: 3%;
  height: 93vh;
  align-items: center;
  max-height: 93vh;
}

.home-landing-page-carousel {
  padding-right: 0;
  grid-template-columns: 0.5fr 1fr;
  grid-template-rows: 1fr;
  margin-bottom: 4vh;
  grid-template-areas: "text" "img";
}

.home-landing-page-carousel-image-container {
  grid-area: "img";
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  overflow: hidden;
}

.home-landing-page-carousel-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 20%, rgba(0, 0, 0, 1) 50%);
  mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 20%, rgba(0, 0, 0, 1) 50%);
}

.home-landing-page-carousel {
  padding-top: 0vh;
}

.home-landing-page-carousel-container {
  position: relative;
  height: 570px;
  display: flex;
  overflow: hidden;
}

.home-landing-page-carousel {
  transition: box-shadow 0.3s ease;
}

.home-landing-page-carousel-text {
  backdrop-filter: blur(5px);
  display: flex;
  flex-direction: column;
  align-self: flex-start;
  padding-top: 50px;
  gap: 5px;
}

.sub-header-section-landing-page-text {
  display: flex;
  flex-direction: column;
  align-self: center;
  gap: 5px;
}

.home-landing-page-carousel-text {
  grid-area: text;
  display: grid;
  overflow: hidden;
  grid-template-rows: 70px 1px 1fr;
}

.home-landing-page-carousel-chips {
  display: flex;
  gap: 10px;
  padding: 20px;
  align-self: center;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.landing-page-carousel-chip {
  font-size: 1.2rem;
  padding: 0px 10px;
  height: 100%;
  transition:
    background-color 0.5s ease-in-out,
    opacity 0.5 ease-in-out,
    background-image 0.5 ease-in-out;
}

.home-landing-page-carousel-chips-container {
  display: flex;
  position: relative;
  height: 40px;
  border-radius: 15px;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.home-landing-page-carousel-left-arrow {
  position: absolute;
  left: 1%;
  top: 50%;
  cursor: pointer;
}

.home-landing-page-carousel-right-arrow {
  position: absolute;
  right: 1%;
  top: 50%;
  cursor: pointer;
}

.home-landing-page-carousel-left-arrow,
.home-landing-page-carousel-right-arrow {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
}

.home-landing-page-carousel-left-arrow-icon,
.home-landing-page-carousel-right-arrow-icon {
  font-size: 2rem;
}

.sub-header-section-landing-page-description {
  margin-top: 20px;
  font-size: 1.5rem;
}

.home-landing-page-carousel-description {
  font-size: 1.2rem;
}

.get-started-landing-page {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  grid-column: 1 / span 3;
  grid-row: 3 / 4;
}

.get-started-button-container {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  flex-direction: column;
  top: 85%;
}

.home-landing-page-carousel-title {
  font-size: 2.75rem;
  font-weight: 550;
}

.home-landing-page-carousel-bullet-title {
  padding-top: 20px;
  font-weight: 600;
  font-size: 1.75rem;
}

.home-landing-page-carousel-bullet {
  font-size: 1.3rem;
}

.home-landing-page-carousel-chips-mobile {
  padding: 5px;
}

.landing-page-cards {
  display: flex;
  border-bottom: 1px solid black;
  justify-content: center;
  align-items: center;
  gap: 80px;
  padding: 5%;
}

.landing-page-card {
  width: 400px;
  height: 500px;
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  gap: 10px;
  padding: 0px 40px;
  border-radius: 50px;
  border: 2px solid rgba(0, 0, 0, 0.5);
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
  overflow: hidden;
}
/* ... */

